--- a/src/main/resources/static/css/uploadcss/upload.css
+++ b/src/main/resources/static/css/uploadcss/upload.css
@@ -1,3 +1,16 @@
+
+html {
+    height: 80%;
+    width: 100%;
+    display: table;
+}
+
+body {
+    display: table-cell;
+    height: 100%;
+    width: 100%;
+}
+
 .father{
     width:100%;
     height:93%;
