--- a/src/main/resources/templates/html/upload.html
+++ b/src/main/resources/templates/html/upload.html
@@ -34,19 +34,36 @@
     <li class="layui-nav-item"><a href="">社区</a></li>
 </ul>
 <div style="height: 100%;padding: 10px;background-color: #0C0C0C">
-    <div class="layui-col-md6" style="padding: 10px;">
-        <div class="layui-card">
+    <div class="layui-col-md6" style="padding: 10px; height:100%">
+        <div class="layui-card" style="height:100%">
             <div class="layui-card-header" style="text-align: center;">我的电脑</div>
             <div class="layui-card-body">
                 展示我的电脑中的文件
             </div>
         </div>
     </div>
-    <div class="layui-col-md6" style="padding: 10px;">
-        <div class="layui-card">
+    <div class="layui-col-md6" style="padding: 10px; height:100%">
+        <div class="layui-card" style="height:100%">
             <div class="layui-card-header" style="text-align: center;">我的网盘</div>
             <div class="layui-card-body">
-                展示我的网盘中的文件
+                <fieldset class="layui-elem-field layui-field-title" style="margin-top: 30px;">
+                    <legend>高级应用：制作一个多文件列表</legend>
+                </fieldset>
+                <div class="layui-upload">
+                    <button type="button" class="layui-btn layui-btn-normal" id="testList">选择多文件</button>
+                    <div class="layui-upload-list">
+                        <table class="layui-table">
+                            <thead>
+                            <tr><th>文件名</th>
+                                <th>大小</th>
+                                <th>状态</th>
+                                <th>操作</th>
+                            </tr></thead>
+                            <tbody id="demoList"></tbody>
+                        </table>
+                    </div>
+                    <button type="button" class="layui-btn" id="testListAction">开始上传</button>
+                </div>
             </div>
         </div>
     </div>
@@ -62,6 +79,66 @@
             layer.msg(elem.text());
         });
     });
+    layui.use('upload',function(){
+        //多文件列表示例
+        var $ = layui.jquery
+            ,upload = layui.upload;
+        var demoListView = $('#demoList')
+            ,uploadListIns = upload.render({
+                elem: '#testList'
+                ,url: 'https://httpbin.org/post' //改成您自己的上传接口
+                ,accept: 'file'
+                ,multiple: true
+                ,auto: false
+                ,bindAction: '#testListAction'
+                ,choose: function(obj){
+                    var files = this.files = obj.pushFile(); //将每次选择的文件追加到文件队列
+                    //读取本地文件
+                    obj.preview(function(index, file, result){
+                        var tr = $(['<tr id="upload-'+ index +'">'
+                            ,'<td>'+ file.name +'</td>'
+                            ,'<td>'+ (file.size/1024).toFixed(1) +'kb</td>'
+                            ,'<td>等待上传</td>'
+                            ,'<td>'
+                            ,'<button class="layui-btn layui-btn-xs demo-reload layui-hide">重传</button>'
+                            ,'<button class="layui-btn layui-btn-xs layui-btn-danger demo-delete">删除</button>'
+                            ,'</td>'
+                            ,'</tr>'].join(''));
+
+                        //单个重传
+                        tr.find('.demo-reload').on('click', function(){
+                            obj.upload(index, file);
+                        });
+
+                        //删除
+                        tr.find('.demo-delete').on('click', function(){
+                            delete files[index]; //删除对应的文件
+                            tr.remove();
+                            uploadListIns.config.elem.next()[0].value = ''; //清空 input file 值，以免删除后出现同名文件不可选
+                        });
+
+                        demoListView.append(tr);
+                    });
+                }
+            ,done: function(res, index, upload){
+                if(res.files.file){ //上传成功
+                    var tr = demoListView.find('tr#upload-'+ index)
+                        ,tds = tr.children();
+                    tds.eq(2).html('<span style="color: #5FB878;">上传成功</span>');
+                    tds.eq(3).html(''); //清空操作
+                    return delete this.files[index]; //删除文件队列已经上传成功的文件
+                }
+                this.error(index, upload);
+            }
+            ,error: function(index, upload){
+                var tr = demoListView.find('tr#upload-'+ index)
+                    ,tds = tr.children();
+                tds.eq(2).html('<span style="color: #FF5722;">上传失败</span>');
+                tds.eq(3).find('.demo-reload').removeClass('layui-hide'); //显示重传
+            }
+        });
+    })
+
 
 </script>
 </body>
